# DeepM

./: .gitignore  README.md  RELEASE_NOTES.md  etap-1-mvp-yadro-i-model.md  etap-2-sistemnaya-integraciya.md  etap-3-dizayn-i-dopolnitelnye-funkcii.md  icon.ai  index.html  package-lock.json  package.json  vite.config.ts
scripts/: stage-ocr.ps1
src/: App.tsx  api.ts  i18n-context.tsx  i18n.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  logging.rs  main.rs
src-tauri/src/core/: engine.rs  history.rs  languages.rs  mod.rs  model_manager.rs  ocr_normalize.rs  prompts.rs
src-tauri/src/os_integration/: clipboard_util.rs  floating.rs  hotkeys.rs  mod.rs  ocr.rs  process.rs  tray.rs  uia.rs
src-tauri/src/shortcuts/: mod.rs
src/components/: AboutPanel.css  AboutPanel.tsx  ExclusionsModal.css  ExclusionsModal.tsx  FloatingButton.css  FloatingButton.tsx  HistoryPanel.css  HistoryPanel.tsx  HotkeyCapture.tsx  ModelManager.css  ModelManager.tsx  OcrLanguages.css  OcrLanguages.tsx  OcrTestPanel.css  OcrTestPanel.tsx  SettingsPanel.css  SettingsPanel.tsx  TranslatorPanel.css  TranslatorPanel.tsx
src/lib/: align.ts
src/styles/: App.css  global.css
